force-app/main/default/objects/License_and_Certifications__c/License_and_Certifications__c.object-meta.xml
<CustomObject>
    <description>Credential stores licenses and certifications related to the practitioners with their expiries.</description>
    <label>Credential</label>
    <nameField>
        <label>Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>