force-app/main/default/objects/License_and_Certifications__c/fields/Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Type__c</fullName>
    <label>Credential Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Specialization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>