force-app/main/default/objects/License_and_Certifications__c/fields/Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practitioner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Practitioner</value>
        </filterItems>
        <filterItems>
            <field>Contact.Elixir_Contact_Type__c</field>
            <operation>equals</operation>
            <value>Elixir_Practitioner_Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credentials</relationshipLabel>
    <relationshipName>License_and_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>