force-app/main/default/objects/License_and_Certifications__c/fields/Valid_from__c.field-meta.xml
<CustomField>
    <fullName>Valid_from__c</fullName>
    <label>Valid from</label>
    <type>Date</type>
</CustomField>