force-app/main/default/objects/License_and_Certifications__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>32</length>
    <type>Text</type>
</CustomField>