force-app/main/default/objects/License_and_Certifications__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Criteria_Type__c</columns>
    <columns>Practitioner__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Value__c</columns>
    <columns>Valid_from__c</columns>
    <columns>Valid_To__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>